# rstop

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  history.rs  main.rs
src/metrics/: cpu.rs  gpu.rs  mem.rs  mod.rs  temp.rs
src/ui/: mod.rs  widgets.rs
