[package]
name = "rstop"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Henrique dos Santos Cunha"]
description = "Terminal-based Linux system monitor with CPU, memory, GPU and thermal metrics"
license = "MIT"
readme = "README.md"
# repository = "<REPO_URL>"  # TODO: set before `cargo publish`
keywords = ["tui", "monitor", "system", "htop", "cli"]
categories = ["command-line-utilities", "visualization"]

[features]
default = ["nvidia"]
nvidia = ["dep:nvml-wrapper"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = "0.32"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
nvml-wrapper = { version = "0.10", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "rstop"
path = "src/main.rs"
